data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_506.wast
;; 7. **Test Description:**    - Design a loop that uses `br_table` to branch to multiple targets. Include scenarios where some entries in the `br_table` have incorrect type associations.    - **Constraint Checking:** Tests the correctness of type verification for multiple branch targets within `br_table`.    - **Relation to Infinite Loops:** Incorrect type associations can lead to an absence of proper branching conditions, causing the loop to run endlessly.

(assert_invalid
  (module
    (func
      (block
        (loop (result i32)
          (block (result i32)
            (br_table 0 1 2 (i32.const 0)) (i64.const 1)
          )
        )
      )
    )
  )
  "type mismatch"
)